src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* .tooltip {
  @apply invisible absolute p-1 -mt-10 rounded border border-gray-200 text-white;
}

.has-tooltip:hover .tooltip {
  @apply md:visible z-50
} */


/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  line-height: 1.75;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
} */

/* .learning {
  background-color:coral;
}

.familiar {
  background-color: aquamarine;
}

.learned {
  background-color: lightgray;
} */

/* .word { */
  /* border: 1px solid rgba(0, 0, 0, 0);
  padding: 2px;
  border-radius: 3px; */
/* } */

/* .word:hover {
  border-color: blue;
} */

/* .phrase {
  border: 1px solid rgba(0, 0, 0, 0);
  padding: 4px;
  border-radius: 3px;
}

.phrase:hover {
  border-color: red;
} */

/* span > ::selection {
  background-color: rgb(1, 0, 0);
}

:not(p) > span:active {
  background-color: rgb(1, 0, 0);
} */

/* ::slection {
  appearance: none;
} */

/* iframe {
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch; */
/* } */

/* iframe html {
  -webkit-transform:translate3d(0,0,0);
  overflow-x: hidden;
}

iframe > html {
  width: 300px;
} */

/* .hero { */
  /* max-height: calc(100vh - 64px); */
  /* max-height: 100vh; */
  /* box-sizing: border-box; */
  /* padding-top: 64px; */
  /* margin-top: -64px; */
  /* margin-top: -2rem; */
/* } */

/* html {
  scroll-behavior: smooth;
} */

@layer base {
  :root {
    --bg-primary: #000; /* black */
    --bg-secondary: #f3f4f6; /* gray-100 */
    --bg-tertiary: #fff; /* white */
    --bg-four: #fff; /* white */
    --bg-five: #000; /* black */
    
    --text-primary: #000000; /* black */
    --text-secondary: #4b5563; /* gray-600 */
    --text-tertiary: #111827; /* gray-900 */
    --text-four: #fff; /* white */
    --text-five: #d1d5db; /* gray-300 */
    --text-six: #374151; /* gray-700 */

    --btn-secondary: #0284c7; /* sky-600 */
    --btn-tertiary: #701a75; /* fuchsia-900 */
  }
}

.light {
  --bg-primary: #111827; /* gray-900 */
  --bg-secondary: #f3f4f6; /* sky-600 */
  --bg-tertiary: #fff; /* white*/
  --bg-four: #fff; /* white */
  --bg-five: #000; /* black */

  --text-primary: #000000; /* black */
  --text-secondary: #4b5563; /* gray-600 */
  --text-tertiary: #111827; /* gray-900 */
  --text-four: #fff; /* white */
  --text-five: #d1d5db; /* gray-300 */
  --text-six: #374151; /* gray-700 */
}

.dark {
  /* --bg-primary: #1f2937; gray-800 */
  --bg-primary: #111827; /* gray-900 */
  --bg-secondary: #111827; /* gray-800 */
  --bg-tertiary: #1f2937; /* gray-900 */
  --bg-four: #374151; /* gray-700 */
  --bg-five: #000; /* black */

  --text-primary: #FFFFFF; /* white */
  --text-secondary: #cbd5e1; /*  */
  --text-tertiary: #f9fafb; /*  */
  --text-four: #000; /* black */
  --text-five: #d1d5db; /* gray-300 */
  --text-six: #d1d5db; /* gray-300 */


  --btn-primary: #701a75; /* fuchsia-900 */
  --btn-secondary: #0284c7; /* sky-600 */

}

/* dark - gray-900, boxes gray-800, heading text white, other text gray-400 */

/* input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  border: none;
  -webkit-text-fill-color: green;
  -webkit-box-shadow-color: #4b5563;
  box-shadow: #4b5563;
  transition: background-color 5000s ease-in-out 0s;
} */

